<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/activity3"
    tools:context="com.example.rithish.pso_imp.Activity3"
    android:background="#b0daff">

    <TextView android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12pt"
        android:textColor="#3A211C"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/textView4" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:background="@android:drawable/btn_dropdown"
        android:layout_marginBottom="37dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label1"
        android:id="@+id/textView8"
        android:layout_above="@+id/spinner"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Np:"
        android:id="@+id/textView5"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_text"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText"
        android:gravity="center_horizontal"
        android:hint="@string/no_of_particle"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Nd:"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_text"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_alignBottom="@+id/textView6"
        android:gravity="center_horizontal"
        android:hint="@string/no_of_dimensions"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Nt:"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="C1:"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="C2:"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Chi:"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView10"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_text"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_above="@+id/textView9"
        android:gravity="center_horizontal"
        android:hint="@string/no_of_timesteps"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_text"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        android:inputType="phone"
        android:text="2.0"
        android:ems="10"
        android:id="@+id/editText4"
        android:gravity="center_horizontal"
        android:hint="Egoistic Constant"
        android:layout_above="@+id/textView10"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_text"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        android:text="2.0"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_above="@+id/textView11"
        android:gravity="center_horizontal"
        android:hint="Social Constant"
        android:layout_alignRight="@+id/editText4"
        android:layout_alignEnd="@+id/editText4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_text"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText6"
        android:gravity="center_horizontal"
        android:hint="Constriction Factor"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5" />
</RelativeLayout>
